# sudoku

./: .gitmodules  CMakeLists.txt  board.txt  board1.txt  board2.txt
gui/: SudokuWindow.py
include/: SudokuBoard.h
src/: Main.cpp  SudokuBoard.cpp
